# kmore

./: Cargo.toml  README.md
data/: .gitignore  smalltomato.fna
src/: lib.rs  main.rs
