[package]
name = "kmore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
byte-slice-cast = "1.2.2"
quickdna = { git = "https://github.com/SecureDNA/quickdna.git", version = "0.5.0", default-features = false }
walkdir = "2.3.3"
